--- a/Miniscript-Template-001-3 Key Timelock Multisig copy.mediawiki
+++ b/Miniscript-Template-001-3 Key Timelock Multisig copy.mediawiki
@@ -1,8 +1,6 @@
-<pre>
-  Miniscript Template: 1
-  Title: 3 Key Timelock Multisig
-  Created: 2023-09-11
-</pre>
+Miniscript Template: 1
+Title: 3 Key Timelock Multisig
+Created: 2023-09-11
 
 =Name of Template=
 
@@ -10,38 +8,30 @@
 
 =Goal to be achieved by template=
 
-The 2 of 3 Multisig has become a standard in Multisignature solutions. It offers a well-balanced mix of redundancy, security, flexibility, and practicality for securing Bitcoin. Losing one key is not disasterous, and keys can be distributed for better security.
-
-With Miniscript, the addition of time as a security feature enables further disaster recovery such that if two keys were to be lost, a timelock can be employed to allow the wallet to become a 1 of 3 multisig. This can be employed by using a miniscript `tresh()` with four conditions:
-
-This template is proposing 2 Conditions to be satisfied from:
+The 2-of-3 multisig serves as a standard in multisignature solutions, offering a well-balanced combination of redundancy, security, flexibility, and practicality for securing Bitcoin. Loss of a single key does not spell disaster, and key distribution enhances security. Miniscript's time feature enables further disaster recovery. If two keys are lost, a timelock can convert the wallet to a 1-of-3 multisig. The proposal outlines four conditions through Miniscript's `thresh()`:
 
 <pre>
 1. Key 1
 2. Key 2
 3. Key 3
-4. timelock (either relative or absolute)
+4. Timelock (either relative or absolute)
 </pre>
 
-At the wallet's inception, it would require 2 of 3 keys, as if the wallet was a normal legacy 2 of 3 multisig. After the passing of the timelock though, only one key would be required to spend the funds.
+Initially, the wallet requires 2-of-3 keys, functioning as a traditional 2-of-3 multisig. After the timelock expires, only one key is needed to spend the funds.
 
-=Timelock Values Note= 
+=Timelock Values Note=
 
-- The security of the descriptor template is not dependent on the value of a relative or absolute timelock, as it only impacts the duration of the timelock.  For the sake of providing reference transactions on testnet, I used short duration timelocks, but in practice timelock values will differ.
-- Relative timelock descriptors offer a structure which can persist across time, requiring a self-send to extend the timelock security, offerering a better ability to have standard timelock durations within templates. 
-- Absolute timelocks descriptors need to be regularly updated to reinforce the timelock, so it harder to set established timelock values. Updating a descriptor using absolute timelocks requires transfering coins to a new descriptor with updated absolute timelock values.
+- Descriptor template security is independent of relative or absolute timelock values; the impact is on timelock duration only. Reference transactions on testnet use short-duration timelocks; however, practical applications will vary.
+- Relative timelock descriptors provide a persistent structure, requiring a self-send to extend timelock security, thus enabling standardized timelock durations.
+- Absolute timelock descriptors need frequent updates; setting long-term timelock values becomes cumbersome. Updating these descriptors entails transferring coins to a new descriptor with revised absolute timelock values.
 
 Suggested Relative Block Height Timelocks:
+older(32800) - Mid-point block height relative timelock (~278 days assuming constant hashrate)
+older(65535) - Max duration block height relative timelock (~455 days assuming constant hashrate)
 
-* older(32800) - Halfway point of block height relative timelock  (~278 days assuming constant hashrate)
-
-* older(65535) - maximum duration of a block height relative timelock (~455 days assuming constant hashrate)
-
-Suggested Relative Epoch Timmelocks:
-
-* older(4224680) - Approximate Halfway point of epoch time relative timelock (~180 days, 6 months)
-
-* older(4259839) - Maximum duration of a epoch time relative timelock (~388 days)
+Suggested Relative Epoch Timelocks:
+older(4224679) - Mid-point epoch time relative timelock (~180 days, 6 months)
+older(4259839) - Max duration epoch time relative timelock (~388 days)
 
 
 =Example Miniscript Output Descriptors=
@@ -56,7 +46,6 @@ Suggested Relative Epoch Timmelocks:
 
 [https://mempool.space/testnet/tx/df8a6946816a839f4de9d511ad902d740cc45ddddca3296de8fc11d1fd0c26f4 Reference Testnet Transaction]
 
-
 3. 3 Key Time Lock Multisig - Absolute Epochtime Timelock
     wsh(thresh(2,pk(XPUB1),s:pk(XPUB2),s:pk(XPUB3),snl:after(1694563200)))
 
@@ -67,7 +56,4 @@ Suggested Relative Epoch Timmelocks:
 
 [https://mempool.space/testnet/tx/1a9ba5a5a37a0df72dfbc28f57de89ce35bda1819afa73712bc29caa32164687 Reference Testnet Transaction]
 
-
-
-
-(To Add Taproot based keyset for Minitapscript once merged into Core)
+(Future Addition: Taproot-based keyset for Minitapscript once integrated into Core)
