--- a/Miniscript-Template-002-5 Key Timelock Multisig.mediawiki
+++ b/Miniscript-Template-002-5 Key Timelock Multisig.mediawiki
@@ -10,7 +10,7 @@
 
 =Goal to be achieved by template=
 
-Expanding upon the use of the 2 of 3 multisig, a 3 of 5 multisig allows for multiple timelocks to be introduced for additional flexibility. 
+Expanding upon the concept of a 3 key timed multisig, a 5 key timed multisig allows for multiple timelocks to be introduced for additional flexibility. 
 
 A timelock can be employed to allow a native 3 of 5 multisig to become 2 of 5, and eventually 1 of 5 for disaster recovery. This can be employed by using a miniscript `tresh()` with seven conditions:
 
@@ -26,25 +26,24 @@ A timelock can be employed to allow a native 3 of 5 multisig to become 2 of 5, a
 7. second timelock (either relative or absolute)
 </pre>
 
-Where any 2 conditions can be satisfied to spend the bitcoin. At the wallet's inception, it would require 2 of 3 keys, as if the wallet was a normal legacy 2 of 3 multisig. After the passing of the timelock though, only one key would be required to spend the funds.
 
 =Timelock Values Note= 
 
-- The security of the descriptor template is not dependent on the value of a relative or absolute timelock, as it only impacts the duration of the timelock.  For the sake of providing reference transactions on testnet, I used short duration timelocks, but in practice timelock values will differ.
-- Relative timelock descriptors offer a structure which can persist across time, requiring a self-send to extend the timelock security, offerering a better ability to have standard timelock durations within templates. 
-- Absolute timelocks descriptors need to be regularly updated to reinforce the timelock, so it harder to set established timelock values. Updating a descriptor using absolute timelocks requires transfering coins to a new descriptor with updated absolute timelock values.
+* The security of the descriptor template is not dependent on the value of a relative or absolute timelock, as it only impacts the duration of the timelock. For reference transactions on testnet, short duration timelocks have been used, but in practice timelock values will differ.
+* Relative timelock descriptors offer a structure that can persist across time, requiring a self-send to extend the timelock security, and thus offering a better ability to have standard timelock durations within templates.
+* It is harder to set established timelock values with absolute timelock descriptors as they need to be regularly updated.
 
 Suggested Relative Block Height Timelocks:
 
-older(32800) - Halfway point of block height relative timelock  (~278 days assuming constant hashrate)
+* older(32800) - Halfway point of block height relative timelock (~278 days assuming constant hashrate)
 
-older(65535) - maximum duration of a block height relative timelock (~455 days assuming constant hashrate)
+* older(65535) - maximum duration of a block height relative timelock (~455 days assuming constant hashrate)
 
 Suggested Relative Epoch Timmelocks:
 
-older(4224680) - Approximate Halfway point of epoch time relative timelock (~180 days, 6 months)
+* older(4224680) - Approximate Halfway point of epoch time relative timelock (~180 days, 6 months)
 
-older(4259839) - Maximum duration of a epoch time relative timelock (~388 days)
+* older(4259839) - Maximum duration of an epoch time relative timelock (~388 days)
 
 
 =Example Miniscript Output Descriptor=
