--- a/Miniscript-Template-002-5 Time Layered Multisig.mediawiki
+++ b/Miniscript-Template-002-5 Time Layered Multisig.mediawiki
@@ -1,6 +1,6 @@
 <pre>
   Miniscript Template: 2
-  Title: 5 Key Timelock Multisig
+  Title: 5 Key Time Layered Multisig
   Created: 2023-09-11
 </pre>
 
@@ -22,8 +22,8 @@ A timelock can be employed to allow a native 3 of 5 multisig to become 2 of 5, a
 3. Key 3
 4. Key 4
 5. Key 5
-6. first timelock (either relative or absolute)
-7. second timelock (either relative or absolute)
+6. First timelock (either relative or absolute)
+7. Second timelock (either relative or absolute)
 </pre>
 
 
@@ -44,6 +44,11 @@ Suggested Relative Epoch Timmelocks:
 * older(4224680) - Approximate Halfway point of epoch time relative timelock (~180 days, 6 months)
 
 * older(4259839) - Maximum duration of an epoch time relative timelock (~388 days)
+
+Below is a reference diagram on how the 5 Key Time Layered Multisig operates across time:
+
+<img src=template-002/diagram.jpg></img>
+
 
 
 =Example Miniscript Output Descriptor=
