--- a/README.mediawiki
+++ b/README.mediawiki
@@ -16,24 +16,17 @@ __NOTOC__
 
 =Submission Format=
 
-# Name of Template
+===Name of Template===
 
-# Goal to be achieved by template
-
-# Example Miniscript Output Descriptor
+===Goal to be achieved by template===
 
 
-<code>
-def quick_sort(arr):      
-less = []                 
-pivot_list = []           
-more = []                 
-if len(arr) <= 1:         
-return arr                
-else:                     
-pass                      
-</code>
+===Example Miniscript Output Descriptors===
 
+1. 3 Key Time Lock Multisig - Relative Blockheight Timelock
+    wsh(thresh(2,pk(XPUB1),s:pk(XPUB2),s:pk(XPUB3),snl:older(100)))
+
+[https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769 Reference Testnet Transaction]
 
 {| class="wikitable sortable" style="width: auto; text-align: center; font-size: smaller; table-layout: fixed;"
 !Number
