--- a/README.mediawiki
+++ b/README.mediawiki
@@ -20,7 +20,6 @@ __NOTOC__
 
 ===Goal to be achieved by template===
 
-
 ===Example Miniscript Output Descriptors===
 
 1. 3 Key Time Lock Multisig - Relative Blockheight Timelock
@@ -28,10 +27,18 @@ __NOTOC__
 
 [https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769 Reference Testnet Transaction]
 
+===Additional Notes===
+
+===Additional References===
+
+[[https://bitcoin.sipa.be/miniscript | bitcoin.sipa.be/miniscript]]
+
+=Table of Contents=
 {| class="wikitable sortable" style="width: auto; text-align: center; font-size: smaller; table-layout: fixed;"
 !Number
 !Title
 !Author
+!Co-Author
 !Created
 !Updated
 !Version
@@ -39,6 +46,7 @@ __NOTOC__
 |- style="background-color: #ffcfcf"
 | [[Miniscript-Template-000-Timelocks-in-Templates.mediawiki|000]]
 | Timelocks-in-Templates
+| Rob Hamilton rob@anchorwatch.com
 | Rob Hamilton rob@anchorwatch.com
 | 2023-09-11
 | 2023-09-11
