--- a/README.mediawiki
+++ b/README.mediawiki
@@ -25,12 +25,27 @@ __NOTOC__
 1. 3 Key Time Lock Multisig - Relative Blockheight Timelock
     wsh(thresh(2,pk(XPUB1),s:pk(XPUB2),s:pk(XPUB3),snl:older(100)))
 
+2. Another Miniscript Example:
+    thresh(3,pk(key_1),s:pk(key_2),s:pk(key_3),sln:older(12960))
+
+Resulting script structure
+    <key_1> OP_CHECKSIG OP_SWAP <key_2> OP_CHECKSIG OP_ADD OP_SWAP <key_3>
+    OP_CHECKSIG OP_ADD OP_SWAP OP_IF
+    0
+    OP_ELSE
+    <a032> OP_CHECKSEQUENCEVERIFY OP_0NOTEQUAL
+    OP_ENDIF
+    OP_ADD 3 OP_EQUAL
+
+
 [https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769 Reference Testnet Transaction]
 
 ===Additional Notes===
 
+
 ===Additional References===
 
+[[https://github.com/sipa/miniscript/tree/master | github.com/sipa/miniscript/tree/master]]
 [[https://bitcoin.sipa.be/miniscript | bitcoin.sipa.be/miniscript]]
 
 =Table of Contents=
