--- a/README.mediawiki
+++ b/README.mediawiki
@@ -16,10 +16,13 @@ __NOTOC__
 
 =Submission Format=
 
-===Name of Template=== 
+===Name of Template===
     Proposed Timelock Usage
 
+
 ===Goal to be achieved by template===
+    Proposed Timelock Usage
+    
 
 ===Example Miniscript Output Descriptors===
 
