--- a/README.mediawiki
+++ b/README.mediawiki
@@ -23,12 +23,8 @@ __NOTOC__
 
 
 
-===Example Miniscript Output Descriptors===
+===Miniscript Implementation===
 
-1. 3 Key Time Lock Multisig - Relative Blockheight Timelock
-    wsh(thresh(2,pk(XPUB1),s:pk(XPUB2),s:pk(XPUB3),snl:older(100)))
-
-2. Another Miniscript Example:
     thresh(3,pk(key_1),s:pk(key_2),s:pk(key_3),sln:older(12960))
 
 Resulting script structure
@@ -41,14 +37,17 @@ Resulting script structure
     OP_ADD 3 OP_EQUAL
 
 
-[https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769 Reference Testnet Transaction]
+[https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769 Link to reference transaction]
+    https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769
 
 ===Additional Notes===
 
+[https://github.com/sipa/miniscript/blob/master/bitcoin/script/miniscript.h link to usage example]
 
 ===Additional References===
 
 [[https://github.com/sipa/miniscript/tree/master | github.com/sipa/miniscript/tree/master]]
+
 [[https://bitcoin.sipa.be/miniscript | bitcoin.sipa.be/miniscript]]
 
 =Table of Contents=
