Miniscript-Template-000-Timelocks-in-Templates.mediawiki:
spell correction:usage

--- a/Miniscript-Template-000-Timelocks-in-Templates.mediawiki
+++ b/Miniscript-Template-000-Timelocks-in-Templates.mediawiki
@@ -68,7 +68,7 @@ Background:
 
 * The maximum value for a relative epoch timelock is older(4259839) which is 65,535 unit timelock, resulting in 33,554,431 seconds, or 388 days.
 
-* The 512 second incrementor is a common multiple for the amount of seconds in 4 days, which is 675 units. To encourage intuitive useage of relative timelocks, they should be multiples of 675.
+* The 512 second incrementor is a common multiple for the amount of seconds in 4 days, which is 675 units. To encourage intuitive usage of relative timelocks, they should be multiples of 675.
 , an exception should be made for the largest possible epoch timestamp relative timelock.
 
 '''Proposal''': Starting at 4194304, increment by 675 (4 days), for relative epochtime timelocks, the maximum value being 4259839.
